[gd_scene load_steps=5 format=3 uid="uid://dsldyj4faubq1"]

[ext_resource type="Script" path="res://src/GUI/pick_item_anim.gd" id="1_kw0ts"]
[ext_resource type="Texture2D" uid="uid://bqrpuch1ole7g" path="res://assets/Shikashi's Fantasy Icons Pack v2/#1 - Transparent Icons.png" id="2_j6k0n"]

[sub_resource type="Animation" id="Animation_kubh7"]
resource_name = "default"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfkcm"]
_data = {
"default": SubResource("Animation_kubh7")
}

[node name="PickItemAnim" type="Node2D"]
script = ExtResource("1_kw0ts")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gfkcm")
}

[node name="DisplayContainer" type="Node2D" parent="."]

[node name="Label" type="Label" parent="DisplayContainer"]
offset_left = 4.0
offset_top = 8.0
offset_right = 5.0
offset_bottom = 31.0
text = "1"

[node name="Sprite2D" type="Sprite2D" parent="DisplayContainer"]
texture = ExtResource("2_j6k0n")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
